--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@
 # Ignore virtual environment directories
 venv/
 
+#Ignore my environment variables
+.env
+
 #ignore my database info
-C:\Users\ysjes\OneDrive\Escritorio\Proyectos\Python\fighting_game_api\routers\SF6\db_connection_generic.py
-C:\Users\ysjes\OneDrive\Escritorio\Proyectos\Python\fighting_game_api\routers\SF6\db_connection.py
+./fighting_game_api/db_connection_generic.py
+./fighting_game_api/db_connection.py
+
+#Docker info
+
+Dockerfile
+docker-compose.yml
+
+#ignore auth directory
+auth/
+deprecated/
+database/
+MySQL_queries/
+all-databases.sql
